--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/custom.js": "/js/custom.js",
+    "/js/jquery.min.js": "/js/jquery.min.js",
+    "/icons/bootstrap-icons.svg": "/icons/bootstrap-icons.svg"
 }
